# quetoo-launcher

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml  warm-cache.yml
scripts/: bump-version.mjs
src/: App.tsx  Onboarding.tsx  ServerBrowser.tsx  Settings.tsx  api.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: assets.rs  browser.rs  config.rs  data.rs  download.rs  error.rs  github.rs  installer.rs  launcher.rs  lib.rs  main.rs  qconfig.rs  snapshot.rs
